# RandomAnime

./: CMakeLists.txt  README.md
include/: anime.h  parser.h
src/: main.cpp  parser.cpp
